...
                          children: [
                            Text(
                              movieDetail.title,
                              style: kHeading5,
                            ),
                            ElevatedButton(
                              key: const Key('watchlistButton'),
                              onPressed: () {
                                if (!isAddedWatchlist) {
                                  // TODO : FirebaseCrashlytics
                                  // FirebaseCrashlytics.instance.crash();
                                  // Navigator.pushNamed(
                                  //     context, searchMoviesRoute);
...
        Padding(
          padding: const EdgeInsets.all(8.0),
          child: CircleAvatar(
            backgroundColor: kRichBlack,
            foregroundColor: Colors.white,
            child: IconButton(
              key: const Key('iconBack'),
              icon: const Icon(Icons.arrow_back),
              onPressed: () {
                Navigator.pop(context);
              },
            ),
          ),
...
